tests/fixtures/invalid/dict_bitand_none.py
# Cannot bitwise AND Dict[str, int] and None
x: dict[str, int] = {"a": 1} & None
